--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="https://github.com/MangelRyujin/mangelryujin.github.io/blob/main/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -38,7 +37,7 @@
                     </div>
                     <ul class="product-list">
                         <li class="product">
-                                <img src="https://github.com/MangelRyujin/mangelryujin.github.io/blob/main/img/3.png" alt="">
+                                <img src="img/3.png" alt="">
                                 <div class="product-details">
                                     <span>Fresa Tropical</span>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -49,7 +48,7 @@
                         </li>
                         <br>
                         <li class="product invers">
-                            <img src="https://github.com/MangelRyujin/mangelryujin.github.io/blob/main/img/2.png" alt="">
+                            <img src="img/2.png" alt="">
                             <div class="product-details">
                                 <span>Mojito arcoiris</span>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -66,7 +65,7 @@
                     </div>
                     <ul class="product-list">
                         <li class="product">
-                                <img src="https://github.com/MangelRyujin/mangelryujin.github.io/blob/main/img/1.png" alt="">
+                                <img src="img/1.png" alt="">
                                 <div class="product-details">
                                     <span>Capuchino</span>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -77,7 +76,7 @@
                         </li>
                         <br>
                         <li class="product invers">
-                            <img src="https://github.com/MangelRyujin/mangelryujin.github.io/blob/main/img/1.png" alt="">
+                            <img src="img/1.png" alt="">
                             <div class="product-details">
                                 <span>Café Bombón</span>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
