modified index and style

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
             <span>M</span>
             <span>e</span>
             <span>t</span>
-            <span>c</span>
+            <span>ç</span>
             <span>a</span>
         </h1>
-        <div class="neon-container">
-            <h1 class="neon" data-text="SRL">SRL</h1>
-            <div class="gradient"></div>
-            <div class="shimmer"></div>
+        <div class="srl">
+            <h1>
+                SRL
+            </h1>
         </div>
+        
     </section>
 
     <section class="menu-section">
