--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="presentation">
-        <h1>
+    <section  class="presentation-section">
+        <div class="logo"><h1>M</h1></div>
+        <div class="presentation">
+        <h1 >
             <span>M</span>
             <span>e</span>
             <span>t</span>
@@ -21,13 +23,14 @@
                 SRL
             </h1>
         </div>
+    </div>
         
     </section>
 
     <section class="menu-section">
         <div class="line-menu">
             <div class="line"></div>
-            <h1>Menu</h1>
+            <h1>Menú</h1>
         </div>
         
         <div class="menu-category-container">
